[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pxhash"
version = "0.1.0"
description = "Phoenix Hash Identification & Analysis Framework"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Phoenix Cybersecurity", email = "info@phoenix.security"}
]
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0"
]

[project.scripts]
pxhash = "main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["pxhash*"]
